creacion y finalizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1> Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+            <section class="container ">
+            <h1 class="text" >We release interesting article about technology</h1>
+            </section>
+            <br><br>
+            <article class="table"> 
+            <div class="firt-paragraph">
+                <img class="one-img" 
+                src="imagenes/Captura desde 2025-05-12 20-10-20.png" 
+                alt="mundo" 
+                />
+                <div>
+                <h3> Unloncking the power of cloud Computing: 
+                    A guide for beginners to Scalable Solutions
+                </h3>
+                <p> November 12,2024</p>
+            </div>
+            </div>
+            <br><br><br><br>
+            <div class="firt-paragraph">
+                <img class="one-img"
+                src="imagenes/Captura desde 2025-05-12 20-10-29.png"
+                alt="recicle">
+                <div>
+                    <h3> The future of AI: How machine learning 
+                        is revolutionizing industries</h3>
+                     <p> November 12,2024</p>   
+                </div>
+            </div>
+            <br><br><br><br>
+            <div class="firt-paragraph">
+                <img class="one-img"
+                src="imagenes/Captura desde 2025-05-12 20-10-36.png"
+                alt="cube">
+                <div>
+                    <h3> The impact of 5G on Bussiness: How 
+                        faster Networks are transforming the Way we Work</h3>
+                    </h3>   
+                    <p> November 12,2024</p>
+            </div>
+        </article>
+
+    </body>
+</html>
